--- a/src/pages/single/single.scss
+++ b/src/pages/single/single.scss
@@ -1,3 +1,49 @@
 .single {
-    background-color: red;
+    display: flex;
+    width: 100%;
+
+    .singleContainer{
+        flex: 6;
+
+        .top{
+            padding: 20px;
+            display: flex;
+            gap: 20px;
+
+            .left{
+                flex: 1;
+                -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
+                box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
+                padding: 20px;
+                margin: 20px;
+                position: relative;
+
+                .editButton{
+                    position: absolute;
+                    top: 0;
+                    right: 0;
+                    padding: 5px;
+                    font-size: 12px;
+                    color: #ff8300;
+                    background-color: #ff8300;
+                }
+
+                .item{
+                    display: flex;
+                    gap: 20px;
+
+                    .itemImg{
+                        width: 100px;
+                        height: 100px;
+                        border-radius: 50%;
+                        object-fit: cover;
+                    }
+                }
+            }
+
+            .right{
+                flex: 2;
+            }
+        }
+    }
 }
