--- a/src/components/datatable/datatable.scss
+++ b/src/components/datatable/datatable.scss
@@ -2,6 +2,27 @@
     height: 600px;
     padding: 20px;
 
+    .datatableTitle{
+    width: 100%;
+    font-size: 24px;
+    color: gray;
+    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    .link{
+      text-decoration: none;
+      color: green;
+      font-size: 16px;
+      font-weight: 400;
+      border: 1px solid green;
+      padding: 5px;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+  }
+
     .withImg{
         display: flex;
         align-items: center;
@@ -32,6 +53,28 @@
         &.passive {
             background-color: rgba(255, 0, 0, 0.05);
             color: crimson;
+        }
+    }
+
+    .cellAction{
+        display: flex;
+        align-items: center;
+        gap: 15px;
+
+        .viewButton{
+            padding: 2px 5px;
+            border-radius: 5px;
+            color: navy;
+            border: 1px dotted rgba(7, 7, 125, 0.38);
+            cursor: pointer;
+        }
+
+        .deleteButton{
+            padding: 2px 5px;
+            border-radius: 5px;
+            color: crimson;
+            border: 1px dotted rgba(220, 20, 60, 0.451);
+            cursor: pointer;
         }
     }
 }
