--- a/src/pages/single/single.scss
+++ b/src/pages/single/single.scss
@@ -15,7 +15,6 @@
                 -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
                 box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
                 padding: 20px;
-                margin: 20px;
                 position: relative;
 
                 .editButton{
@@ -25,7 +24,9 @@
                     padding: 5px;
                     font-size: 12px;
                     color: #ff8300;
-                    background-color: #ff8300;
+                    background-color: #ff840014;
+                    cursor: pointer;
+                    border-radius: 0px 0px 0px 5px;
                 }
 
                 .item{
@@ -38,6 +39,28 @@
                         border-radius: 50%;
                         object-fit: cover;
                     }
+
+                    .details{
+                        .itemTitle{
+                            margin-bottom: 10px;
+                            color: #555;
+                        }
+
+                        .detailItem{
+                            margin-bottom: 10px;
+                            font-size: 14px;
+
+                            .itemKey{
+                                font-weight: bold;
+                                color: gray;
+                                margin-right: 5px;
+                            }
+
+                            .itemValue{
+                                font-weight: 300;
+                            }
+                        }
+                    }
                 }
             }
 
@@ -45,5 +68,17 @@
                 flex: 2;
             }
         }
+        .bottom{
+            -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
+            box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
+            padding: 20px;
+            margin: 10px 20px;
+        }
+        .title{
+            font-size: 15px;
+            color: lightgray;
+            margin-bottom: 20px;
+        }
     }
+
 }
