--- a/src/components/datatable/datatable.scss
+++ b/src/components/datatable/datatable.scss
@@ -2,7 +2,7 @@
     height: 600px;
     padding: 20px;
 
-    .datatableTitle{
+    .dataTableTitle{
     width: 100%;
     font-size: 24px;
     color: gray;
@@ -13,12 +13,13 @@
 
     .link{
       text-decoration: none;
-      color: green;
+      background-color:#27285C;
+      color: white;      
       font-size: 16px;
       font-weight: 400;
-      border: 1px solid green;
+      border: 1px solid #ff8300;
       padding: 5px;
-      border-radius: 5px;
+      border-radius: 2px;
       cursor: pointer;
     }
   }
@@ -41,12 +42,12 @@
         border-radius: 5px;
 
         &.active {
-            background-color: rgba(0, 128, 0, 0.5);
+            background-color: rgba(0, 128, 0, 0.05);
             color: green;
         }
 
         &.pending {
-            background-color:rgba(255, 217, 0, 0.5);
+            background-color:rgba(255, 217, 0, 0.05);
             color: goldenrod; 
         }
 
